--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,16 +27,16 @@ jobs:
       - name: List dist files
         run: ls && cd dist && ls
 
-      # - name: Configure AWS CLI s
-      #   run: |
-      #     mkdir -p ~/.aws
-      #     echo "[default]" > ~/.aws/config
-      #     echo "aws_access_key_id = ${{ secrets.AWS_ACCESS_KEY_ID }}" >> ~/.aws/config
-      #     echo "aws_secret_access_key = ${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> ~/.aws/config
-      #     echo "region = us-east-1" >> ~/.aws/config
+      - name: Configure AWS CLI s
+        run: |
+          mkdir -p ~/.aws
+          echo "[default]" > ~/.aws/config
+          echo "aws_access_key_id = ${{ secrets.AWS_ACCESS_KEY_ID }}" >> ~/.aws/config
+          echo "aws_secret_access_key = ${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> ~/.aws/config
+          echo "region = us-east-1" >> ~/.aws/config
 
-      # - name: aws s3 delete bucket archives
-      #   run: aws s3 rm s3://pizzapoio --recursive
+      - name: aws s3 delete bucket archives
+        run: aws s3 rm s3://pizzapoio --recursive
 
       # - name: aws s3 upload archives
       #   run: aws s3 cp ./dist/carlos-pipeline/browser s3://pizzapoio --recursive
